# summoner-build-lab

./: .env.example  .gitignore  .vercelignore  README.md  codex.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tailwind.config.ts  tsconfig.node.json  tsconfig.server.json  vercel.json
e2e/: otp-navigation.spec.ts
ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
ml/configs/: base.audit-8002.yaml  base.yaml  item_restrictions.json
ml/features/: __init__.py  analytics.py  baseline_dataset.py  catalogs.py  item_restrictions.py  quality.py
ml/inference/: __init__.py  api.py  config.py  puzzle_prep.py  schemas.py  service.py
ml/models/: __init__.py  artifacts.py  feature_builder.py
ml/scripts/: create_venv.ps1  create_venv.py  install.ps1  install_deps.py  tasks.py
ml/tests/: test_api.py  test_item_restrictions.py  test_pipeline.py  test_training.py
ml/training/: __init__.py  baseline.py  ranking.py
prisma/: schema.prisma  seed.ts
reports/: clean-code-audit-2026-05-28.md  competitive-seed-fusion-audit-2026-04-23.md  competitive-seed-yield-report.json  competitive-seed-yield-report.md  match-based-validation-delta-report.json  match-based-validation-delta-report.md  match-based-validation-report-10.after.json  match-based-validation-report-10.after.md  match-based-validation-report-20.after.json  match-based-validation-report-20.after.md  match-based-validation-report.after-1428-10.json  match-based-validation-report.after-1428-10.md  match-based-validation-report.after-1468-20.json  (+21 more)
(+193 files in other folders)
