[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summoner-build-lab-ml"
version = "0.1.0"
description = "CPU-first ML workspace for Summoner Build Lab."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.28,<0.29",
  "joblib>=1.4,<1.6",
  "pandas>=2.2,<2.4",
  "pyarrow>=18,<20",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "scikit-learn>=1.6,<1.8",
  "uvicorn[standard]>=0.34,<0.39",
  "xgboost>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<1.19",
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.13",
]

[tool.setuptools.packages.find]
include = ["features*", "inference*", "models*", "training*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
mypy_path = "."
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
